# vvas-core

./: LICENSE  README.md  build_install.sh  clean.sh  meson.build  meson.cross.template  meson_options.txt
common/: meson.build  vvas_context.c  vvas_device.cpp  vvas_infer_classification.c  vvas_infer_prediction.c  vvas_log.c  vvas_memory.c  vvas_overlay_shape_info.c  vvas_video.c
common/vvas_core/: vvas_common.h  vvas_context.h  vvas_device.h  vvas_dpucommon.h  vvas_infer_classification.h  vvas_infer_prediction.h  vvas_log.h  vvas_memory.h  vvas_memory_priv.h  vvas_overlay_shape_info.h  vvas_video.h  vvas_video_priv.h
decoder/: meson.build  video_hdr.h  vvas_decoder.c  vvas_decoder_priv.h
decoder/vvas_core/: vvas_decoder.h
dpuinfer/: meson.build  vvas_bcc.cpp  vvas_bcc.hpp  vvas_classification.cpp  vvas_classification.hpp  vvas_dpuinfer.cpp  vvas_dpumodels.hpp  vvas_dpupriv.hpp  vvas_efficientdetd2.cpp  vvas_efficientdetd2.hpp  vvas_facedetect.cpp  vvas_facedetect.hpp  vvas_facefeature.cpp  vvas_facefeature.hpp  vvas_facelandmark.cpp  vvas_facelandmark.hpp  vvas_platedetect.cpp  vvas_platedetect.hpp  vvas_platenum.cpp  vvas_platenum.hpp  vvas_posedetect.cpp  vvas_posedetect.hpp  vvas_rawtensor.cpp  vvas_rawtensor.hpp  vvas_refinedet.cpp  vvas_refinedet.hpp  vvas_reid.cpp  vvas_reid.hpp  vvas_roadline.cpp  vvas_roadline.hpp  vvas_segmentation.cpp  vvas_segmentation.hpp  vvas_ssd.cpp  vvas_ssd.hpp  vvas_tfssd.cpp  vvas_tfssd.hpp  vvas_ultrafast.cpp  vvas_ultrafast.hpp  vvas_vehicleclassification.cpp  vvas_vehicleclassification.hpp  (+4 more)
dpuinfer/vvas_core/: vvas_dpuinfer.hpp
metaaffixer/: meson.build  vvas_metaaffixer.c
metaaffixer/vvas_core/: vvas_metaaffixer.h
metaconvert/: meson.build  vvas_metaconvert.c
metaconvert/vvas_core/: vvas_metaconvert.h
overlay/: meson.build  vvas_overlay.cpp
overlay/vvas_core/: vvas_overlay.h
parser/: meson.build  parser_common.c  parser_common.h  parser_h264.c  parser_h264.h  parser_h265.c  parser_h265.h  vvas_parser.c  vvas_parser_priv.h
parser/vvas_core/: vvas_parser.h
pkgconfig/: meson.build  vvas-core.pc.in
postprocessor/: meson.build  vvas_postprocessor.cpp
postprocessor/vvas_core/: vvas_postprocessor.hpp
scaler/: meson.build  vvas_scaler.c
scaler/scaler_hw/: meson.build  multi_scaler_hw.h  vvas_scaler_hw.c  vvas_scaler_hw_priv.h
scaler/scaler_sw/: meson.build  multi_scaler_sw.h  multiscaler_x86.h  multiscaler_x86_lib.c  vvas_scaler_sw.c  vvas_scaler_sw_coeff.h  vvas_scaler_sw_priv.h
scaler/vvas_core/: vvas_scaler.h  vvas_scaler_interface.h
test/: meson.build
test/app/: meson.build  test_cascade_yolov3_3xresnet.cpp  test_cascade_yolov3_3xresnet_mt.cpp
test/app/cascade_jsons/: cascade_yolov3_3xresnet18.json  metaconvert_config.json  resnet18_vehicle_color.json  resnet18_vehicle_make.json  resnet18_vehicle_type.json  yolov3_voc_tf.json
test/utils/: meson.build  vvas_buffer_pool.c
test/utils/vvas_utils/: vvas_buffer_pool.h
tracker/: meson.build  vvas_tracker.cpp
tracker/tracker_algo/: Hungarian.cpp  Hungarian.h  correlation_filter.cpp  correlation_filter.hpp  define.hpp  features.cpp  features.hpp  fft.cpp  fft.hpp  mosse_filter.cpp  mosse_filter.hpp  tracker.cpp  tracker.hpp  tracker_int.hpp
tracker/vvas_core/: vvas_tracker.hpp
utils/: meson.build
utils/glib/: meson.build  vvas_hash.c  vvas_list.c  vvas_mutex.c  vvas_node.c  vvas_queue.c
utils/glib/vvas_utils/: vvas_hash.h  vvas_list.h  vvas_mutex.h  vvas_node.h  vvas_queue.h
utils/vvas_utils/: vvas_utils.h
